...
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please choose a name, my Lord, with which you will be feared by all!"
        android:textColor="@color/primary"
        android:textSize="@dimen/fontSizeBig"
        app:layout_constraintBottom_toTopOf="@+id/pt_UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <EditText
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/btn_NameSelectEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Into the fray!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
