<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/H1TextView"
        android:text="Carcassonne" />

    <Button
        android:id="@+id/btn_navigate_create_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_session"
        style="@style/PrimaryButton"/>

    <Button
        android:id="@+id/btn_navigate_join_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join Session"
        style="@style/PrimaryButton"/>

    <Button
        android:id="@+id/btn_ui_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UI Elements (Dev)"
        style="@style/PrimaryButton"/>
    <Button
        android:id="@+id/btn_gameplay_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gameplay Test Funktions (Dev)"
        style="@style/PrimaryButton"/>

</LinearLayout>