<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        style="@style/H1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Carcassonne"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_navigate_create_session"
        style="@style/PrimaryButton"
        android:layout_width="219dp"
        android:layout_height="82dp"
        android:insetTop="@dimen/spaceSuperBig"
        android:insetBottom="@dimen/spaceDefault"
        android:text="@string/create_session" />

    <Button
        android:id="@+id/btn_navigate_join_session"
        style="@style/PrimaryButton"
        android:layout_width="218dp"
        android:layout_height="64dp"
        android:insetTop="@dimen/spaceDefault"
        android:insetBottom="@dimen/spaceDefault"
        android:text="Join Session" />

    <Button
        android:id="@+id/btn_BackToLobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to lobby" />

    <ProgressBar
        android:id="@+id/pb_menu"
        style="?android:attr/progressBarStyle"
        android:layout_width="131dp"
        android:layout_height="wrap_content" />


</LinearLayout>